# MSCModLoader

./: .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt
Assets/MSCLoader_Console/: console.unity3d
Assets/MSCLoader_Settings/: settingsui.unity3d
Example Mods/Example mod/: ExampleCommand.cs  ExampleMod.cs
MSCLoader/: CMakeLists.txt  Examples.cs
MSCLoader/MSCLoader/: ConsoleCommand.cs  ConsoleController.cs  ConsoleUIResizer.cs  ConsoleView.cs  FsmHook.cs  KeyBinding.cs  Keybind.cs  LoadAssets.cs  MSCLoader.cs  MSCUnloader.cs  Mod.cs  ModAudio.cs  ModAudioStream.cs  ModConsole.cs  ModFixedUpdate.cs  ModLoader.cs  ModOnGUI.cs  ModSettings.cs  ModUI.cs  ModUIDrag.cs  ModUpdate.cs  ModsManifest.cs  OBJLoader.cs  PlayMakerExtensions.cs  SaveLoad.cs  Settings.cs  SettingsView.cs  packages.config
MSCLoader/MSCLoader/AudioLibrary/: AudioFileReader.cs  Manager.cs  Playlists.cs
MSCLoader/MSCLoader/AudioLibrary/MP3_Streaming/: MP3Stream.cs  ReadFullyStream.cs
MSCLoader/MSCLoader/AudioLibrary/NAudio.Vorbis/: VorbisWaveReader.cs
MSCLoader/MSCLoader/Commands/: CommandLogAll.cs  CommandVersion.cs  ManifestCommand.cs
MSCLoader/MSCLoader/Properties/: AssemblyInfo.cs
MSCLoader/cmake/: NAudioFlac.cmake
MSCPatcher/: CMakeLists.txt
MSCPatcher/MSCPatcher/: DebugStuff.cs  Form1.Designer.cs  Form1.cs  Log.cs  MD5FileHashes.cs  MainData.cs  PatchGameAssembly.cs  Patcher.cs  Program.cs  packages.config
MSCPatcher/MSCPatcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Visual Studio templates/Console Command/: Class.cs
Visual Studio templates/Console Command/Properties/: AssemblyInfo.cs
Visual Studio templates/MSCLoader Mod/: AssemblyInfo.cs  Class1.cs
Visual Studio templates/MSCLoader Mod/Properties/: AssemblyInfo.cs
Visual Studio templates/MonoBehaviour Class/: Class.cs
Visual Studio templates/MonoBehaviour Class/Properties/: AssemblyInfo.cs
Visual Studio templates/VSIXProject1/Properties/: AssemblyInfo.cs
cmake/: NugetRestore.cmake  pdb2mdb.cmake
